@@ -6732,4 +6732,5 @@ PACKAGE: 2.2.99.2
 2007-12-19 tdb
  * Session::render_link shouldn't URI escape (should be HTML escaping, which
     the DOM library will do for us), fixing #3197
+ * Added methods to parse XML direct from a URL
 
